--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,4 @@
-DATABASE_URL="DatabaseConnectionStringHere"
+DATABASE_URL="mysql://username:password@127.0.0.1:3306/refuge"
 
 JWT_SECRET=change_me
 SEED_ADMIN_EMAIL=admin@refuge.local
