--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -6,7 +6,7 @@
     "outDir": "dist-node"
   },
   "include": [
-    "electron/db/**/*.ts",
+    "src/main/db/**/*.ts",
     "scripts/**/*.ts"
   ]
 }
