--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
     "jsx": "preserve",
     "strict": true,
     "skipLibCheck": true,
@@ -12,7 +12,14 @@
     "isolatedModules": true,
     "allowArbitraryExtensions": true,
     "ignoreDeprecations": "5.0",
-    "types": ["vite/client", "node"]
+    "types": ["vite/client", "node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/renderer/*"],
+      "@renderer/*": ["src/renderer/*"],
+      "@main/*": ["src/main/*"],
+      "@shared/*": ["src/shared/*"]
+    }
   },
   "include": [
     "src/**/*.ts",
@@ -20,12 +27,12 @@
     "src/**/*.vue",
     "src/**/*.d.ts",
     "shims-vue.d.ts",
-    "electron/**/*.ts",
-    "electron/**/*.d.ts"
+    "forge.env.d.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    "dist-electron"
+    ".vite",
+    "out"
   ]
 }
